# Taburetka

./: .gitignore  README.md  eslint.config.js  package.json  prettier.config.js  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.js
scripts/: build-sprite.js  otf2woff2.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: index.ts  shared.svelte.ts  types.ts  utils.ts
src/lib/components/button/: Button.svelte
src/lib/components/header/: Header.svelte
src/lib/components/menu_button/: MenuButton.svelte
src/lib/components/select/: Select.svelte
src/lib/components/select_device/: SelectDevice.svelte  index.ts
src/lib/components/slider/: Slider.svelte
src/lib/components/usercard/: UserCard.svelte  index.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/call/: +page.svelte
src/routes/settings/: +page.svelte
static/: fonts.css
