[package]
name = "prekol_desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.17.3"
futures = "0.3.31"
serde = "1.0.219"
serde_json = "1.0.140"
tauri = { version = "2.4.0", features = [] }
tauri-plugin-dialog = "2.3.2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tokio = "1.44.1"
tokio-tungstenite = { version = "0.26.2", features = [] }
uuid = { version = "1.23.0", features = ["v7", "serde"] }
walkdir = "2.5.0"
zip = "2.5.0"

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }
